# kgascii

./: .gitignore  CMakeLists.txt
cmake/: FindOpenCV.cmake
kgascii/: ;  CMakeLists.txt  asciifier.cpp  asciifier.hpp  dynamic_asciifier.cpp  dynamic_asciifier.hpp  dynamic_glyph_matcher.hpp  dynamicasciifier.cpp  dynamicasciifier.hpp  font.hpp  font_image.cpp  font_image.hpp  font_image_loader.cpp  font_image_loader.hpp  font_io.hpp  font_loader.cpp  font_loader.hpp  font_pca.cpp  font_pca.hpp  font_pcanalyzer.cpp  font_pcanalyzer.hpp  fontimage.cpp  fontimage.hpp  fontloader.cpp  fontloader.hpp  ft2_font_image_loader.cpp  ft2_font_image_loader.hpp  ft2_font_loader.cpp  ft2_font_loader.hpp  glyph_matcher.cpp  glyph_matcher.hpp  glyph_matcher_context.cpp  glyph_matcher_context.hpp  glyph_matcher_context_factory.cpp  glyph_matcher_context_factory.hpp  glyphmatcher.cpp  glyphmatcher.hpp  glyphmatchercontext.cpp  glyphmatchercontext.hpp  hexstring.cpp  (+39 more)
kgascii/ft2pp/: error.hpp  face.hpp  library.hpp  util.hpp
kgascii/internal/: enum_wrapper.hpp  ft2_font_loader.hpp  glyph_matcher_registration.hpp  traits.hpp
kgutil/: CMakeLists.txt  enum_wrapper.hpp  image_io.hpp  resample.hpp  srgb.hpp  task_queue.hpp
kgutil/resample/: resampler.hpp
kgutil/resample/filter/: bell.hpp  box.hpp  bspline.hpp  lanczos.hpp  triangle.hpp
tools/: CMakeLists.txt
tools/common/: CMakeLists.txt  cast_surface.hpp  cmdline_tool.cpp  cmdline_tool.hpp  cmdlinetool.cpp  cmdlinetool.hpp  console.hpp  console_unix.cpp  console_win.cpp  validateoptional.hpp  video_player.cpp  video_player.hpp
tools/dir2dsc/: CMakeLists.txt  generate_font_command.cpp  generate_font_command.hpp  main.cpp
tools/dsc2img/: CMakeLists.txt  dsc2img.cpp  main.cpp  render_font_command.cpp  render_font_command.hpp
tools/dumpfont/: CMakeLists.txt  dump_font_command.cpp  dump_font_command.hpp  dumpfont.cpp  main.cpp
tools/extractfont/: CMakeLists.txt  extract_font_command.cpp  extract_font_command.hpp  extractfont.cpp  main.cpp
tools/img2ascii/: CMakeLists.txt  main.cpp
tools/pcadump/: CMakeLists.txt  main.cpp  render_pca_command.cpp  render_pca_command.hpp
tools/txtrender/: CMakeLists.txt  main.cpp  render_text_command.cpp  render_text_command.hpp
tools/vid2ascii/: CMakeLists.txt  main.cpp
