PROJECT(TOOLS)

SET(Boost_USE_STATIC_LIBS        ON)
SET(Boost_USE_MULTITHREADED      ON)
SET(Boost_USE_STATIC_RUNTIME    OFF)
FIND_PACKAGE(Boost 1.46.0 COMPONENTS filesystem system program_options REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(dumpfont)
ADD_SUBDIRECTORY(extractfont)
ADD_SUBDIRECTORY(dsc2img)

