PROJECT(TOOLS)

SET(Boost_USE_STATIC_LIBS        ON)
SET(Boost_USE_MULTITHREADED      ON)
SET(Boost_USE_STATIC_RUNTIME    OFF)
FIND_PACKAGE(Boost 1.46.0 COMPONENTS filesystem system program_options REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${TOOLS_SOURCE_DIR})
INCLUDE_DIRECTORIES(${TOOLS_BINARY_DIR})

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(dumpfont)
ADD_SUBDIRECTORY(extractfont)
ADD_SUBDIRECTORY(dsc2img)
ADD_SUBDIRECTORY(vid2ascii)
ADD_SUBDIRECTORY(img2ascii)
ADD_SUBDIRECTORY(pcadump)

