PROJECT(TOOLS)

FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${TOOLS_SOURCE_DIR})
INCLUDE_DIRECTORIES(${TOOLS_BINARY_DIR})

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(dumpfont)
ADD_SUBDIRECTORY(extractfont)
ADD_SUBDIRECTORY(dsc2img)
ADD_SUBDIRECTORY(vid2ascii)
ADD_SUBDIRECTORY(img2ascii)
ADD_SUBDIRECTORY(pcadump)
ADD_SUBDIRECTORY(dir2dsc)
ADD_SUBDIRECTORY(txtrender)

