INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

ADD_EXECUTABLE(dir2dsc main.cpp)
TARGET_LINK_LIBRARIES(dir2dsc tools_common)
TARGET_LINK_LIBRARIES(dir2dsc ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(dir2dsc ${Boost_LIBRARIES})

