INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${JPEG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_GIL_2_INCLUDE_DIR})

SET(dir2dsc_SRCS
    generate_font_command.hpp
    generate_font_command.cpp
    main.cpp
)

ADD_EXECUTABLE(dir2dsc ${dir2dsc_SRCS})
TARGET_LINK_LIBRARIES(dir2dsc tools_common)
TARGET_LINK_LIBRARIES(dir2dsc ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(dir2dsc ${JPEG_LIBRARIES})
TARGET_LINK_LIBRARIES(dir2dsc ${TIFF_LIBRARIES})
TARGET_LINK_LIBRARIES(dir2dsc ${PNG_LIBRARIES})
