INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${KGASCII_SOURCE_DIR})
INCLUDE_DIRECTORIES(${TOOLS_SOURCE_DIR})

ADD_EXECUTABLE(dsc2img main.cpp)
TARGET_LINK_LIBRARIES(dsc2img kgascii)
TARGET_LINK_LIBRARIES(dsc2img tools_common)
TARGET_LINK_LIBRARIES(dsc2img ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(dsc2img ${OpenCV_LIBS})

