INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${JPEG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_GIL_2_INCLUDE_DIR})

SET(dsc2img_SRCS
    render_font_command.hpp
    render_font_command.cpp
    main.cpp
)

ADD_EXECUTABLE(dsc2img ${dsc2img_SRCS})
TARGET_LINK_LIBRARIES(dsc2img tools_common)
TARGET_LINK_LIBRARIES(dsc2img ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(dsc2img ${JPEG_LIBRARIES})
TARGET_LINK_LIBRARIES(dsc2img ${TIFF_LIBRARIES})
TARGET_LINK_LIBRARIES(dsc2img ${PNG_LIBRARIES})

