INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR_ft2build})
INCLUDE_DIRECTORIES(${KGASCII_SOURCE_DIR})

ADD_EXECUTABLE(dumpfont dumpfont.cpp)
TARGET_LINK_LIBRARIES(dumpfont kgascii)
TARGET_LINK_LIBRARIES(dumpfont ${FREETYPE_LIBRARY})
TARGET_LINK_LIBRARIES(dumpfont ${Boost_LIBRARIES})

