INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR_ft2build})
INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR_freetype2})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${KGASCII_SOURCE_DIR})
INCLUDE_DIRECTORIES(${TOOLS_SOURCE_DIR})

ADD_EXECUTABLE(extractfont main.cpp)
TARGET_LINK_LIBRARIES(extractfont kgascii)
TARGET_LINK_LIBRARIES(extractfont tools_common)
TARGET_LINK_LIBRARIES(extractfont ${FREETYPE_LIBRARY})
TARGET_LINK_LIBRARIES(extractfont ${Boost_LIBRARIES})

