INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})

ADD_EXECUTABLE(img2ascii main.cpp)
TARGET_LINK_LIBRARIES(img2ascii kgascii)
TARGET_LINK_LIBRARIES(img2ascii tools_common)
TARGET_LINK_LIBRARIES(img2ascii ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(img2ascii ${OpenCV_LIBS})

