INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${JPEG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_GIL_2_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

ADD_EXECUTABLE(img2ascii main.cpp)
TARGET_LINK_LIBRARIES(img2ascii tools_common)
TARGET_LINK_LIBRARIES(img2ascii ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(img2ascii ${JPEG_LIBRARIES})
TARGET_LINK_LIBRARIES(img2ascii ${TIFF_LIBRARIES})
TARGET_LINK_LIBRARIES(img2ascii ${PNG_LIBRARIES})

