INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})

ADD_EXECUTABLE(pcadump main.cpp)
TARGET_LINK_LIBRARIES(pcadump kgascii)
TARGET_LINK_LIBRARIES(pcadump tools_common)
TARGET_LINK_LIBRARIES(pcadump ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(pcadump ${OpenCV_LIBS})

