INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${JPEG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_GIL_2_INCLUDE_DIR})

SET(pcadump_SRCS
    render_pca_command.hpp
    render_pca_command.cpp
    main.cpp
)

ADD_EXECUTABLE(pcadump ${pcadump_SRCS})
TARGET_LINK_LIBRARIES(pcadump tools_common)
TARGET_LINK_LIBRARIES(pcadump ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(pcadump ${JPEG_LIBRARIES})
TARGET_LINK_LIBRARIES(pcadump ${TIFF_LIBRARIES})
TARGET_LINK_LIBRARIES(pcadump ${PNG_LIBRARIES})

