INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})

ADD_EXECUTABLE(txtrender main.cpp)
TARGET_LINK_LIBRARIES(txtrender tools_common)
TARGET_LINK_LIBRARIES(txtrender ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(txtrender ${OpenCV_LIBS})

