INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})

ADD_EXECUTABLE(vid2ascii main.cpp)
TARGET_LINK_LIBRARIES(vid2ascii tools_common)
TARGET_LINK_LIBRARIES(vid2ascii ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(vid2ascii ${OpenCV_LIBS})

